tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions10(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions10.ts(5,20): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions10.ts (1 errors) ====
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  2. Let cu1 be floor((cp – 65536) / 1024) + 0xD800.
    // Although we should just get back a single code point value of 0xD800,
    // this is a useful edge-case test.
    var x = /\u{D800}/gu;
                       ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    